--- a/css/style.css
+++ b/css/style.css
@@ -373,7 +373,7 @@ dt{
 }
 dd{
     font-size: 0.9em;
-    margin-inline-start: 20px;
+    margin-left: 20px;
 }
 
 #detalle_sobre_obra p{
@@ -402,6 +402,7 @@ iframe {
     left:0;
     width:100%;
     height: 100%;
+    border: 0;
     }
 
 
@@ -578,12 +579,13 @@ iframe {
         justify-content: space-between;
         
     }
-    .sesiones_contenedor_peliculas article{
+    .sesiones_contenedor_peliculas div{
         width: 30%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
     }
+
 
     /* ------------------------------------ */
 
