--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,7 @@ main{
     text-align: center;
     box-sizing: border-box;
 }
+
 .sesiones_film{
     width: 70%;
     border: 1px solid lightgrey;
@@ -580,6 +581,13 @@ iframe {
         
     }
     .sesiones_contenedor_peliculas div{
+        width: 30%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .sesiones_film{
         width: 30%;
         display: flex;
         flex-direction: column;
